k8s/dev/availability-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: availability-service
spec:
  type: ClusterIP
  selector:
    app: availability-service
  ports:
    - protocol: TCP
      port: 5004
      targetPort: 5004
